--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
     "lodash": "^4.13.1",
     "minimist": "^1.1.0",
     "mkdirp": "^0.5.0",
+    "moment": "^2.18.1",
+    "moment-jalaali": "^0.7.0",
+    "persian-date": "^0.1.8-b",
     "postcss": "^5.1.2",
     "prompt-sync": "^1.0.0",
     "q": "^1.0.1",
